--- a/uteg/estructuraDatos1/src/forms/mainMenu.form
+++ b/uteg/estructuraDatos1/src/forms/mainMenu.form
@@ -26,12 +26,12 @@
           <text value="Type the total of alumns"/>
         </properties>
       </component>
-      <component id="dbb2d" class="javax.swing.JButton" binding="cancelButton" default-binding="true">
+      <component id="dbb2d" class="javax.swing.JButton" binding="exitlButton">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Cancel"/>
+          <text value="Exit"/>
         </properties>
       </component>
     </children>
